# python-backend-itmo

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
hw/: 1_asgi.py
hw/asgi/: commands.py  responses.py
hw/hw2/shop_api/: main.py
lecture_2/hw/: ws_rooms.py
lecture_2/hw/shop_api/: main.py
lecture_3/: README.md
lecture_3/hw/: Dockerfile
prometheus/: prometheus.yml
tests/: test_homework_1_vals.py  test_homework_2_1_ws.py
